// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FrontMatter /> should enforce new lines where specified 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          fold_same_newlines
          : 
        </strong>
        <span>
          a b c d e f 
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle JSON formatted data correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      # This page has JSON front matter!
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          JSON
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          description
          : 
        </strong>
        <span>
          Front Matter
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle array paragraphs correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      What's Yaml?
    </div>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      It's for writing data structures in plain text.
    </div>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      And?
    </div>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      And what? That's not good enough for you?
    </div>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      No, I mean, "And what about Yaml?"
    </div>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      Oh, oh yeah. Uh.. Yaml for Ruby.
    </div>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle array types correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      apple
    </div>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      banana
    </div>
    <div
      className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
    >
      carrot
    </div>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle arrays and objects correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          foo
          : 
        </strong>
        <span>
          whatever
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          bar
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              fruit
              : 
            </strong>
            <span>
              apple
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              name
              : 
            </strong>
            <span>
              steve
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              sport
              : 
            </strong>
            <span>
              baseball
            </span>
          </div>
        </section>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          more
        </div>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          info
        </div>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              python
              : 
            </strong>
            <span>
              rocks
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              perl
              : 
            </strong>
            <span>
              papers
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              ruby
              : 
            </strong>
            <span>
              scissorses
            </span>
          </div>
        </section>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle arrays as keys correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          work on YAML.py
          : 
        </strong>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          work on Store
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle colon with no space correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          windows_path
          : 
        </strong>
        <span>
          c:\\windows
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle complex JSON data correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          cascade
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              _target
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  kind
                  : 
                </strong>
                <span>
                  page
                </span>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  lang
                  : 
                </strong>
                <span>
                  en
                </span>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  path
                  : 
                </strong>
                <span>
                  /blog/**
                </span>
              </div>
            </section>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              background
              : 
            </strong>
            <span>
              yosemite.jpg
            </span>
          </div>
        </section>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              _target
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  kind
                  : 
                </strong>
                <span>
                  section
                </span>
              </div>
            </section>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              background
              : 
            </strong>
            <span>
              goldenbridge.jpg
            </span>
          </div>
        </section>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Blog
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle custom YAML delimiters correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          custom-delim
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          user
          : 
        </strong>
        <span>
          norvalbv
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle deeply nested data correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Users
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              BenjiTheGreat
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  permissions
                  : 
                </strong>
                <div
                  className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
                >
                  login
                </div>
                <div
                  className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
                >
                  logout
                </div>
                <div
                  className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
                >
                  chat
                </div>
                <div
                  className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
                >
                  access control
                </div>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  timezone
                  : 
                </strong>
                <span>
                  GMT
                </span>
              </div>
            </section>
          </div>
        </section>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              SnakeTheBate
              : 
            </strong>
            <section
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "gap": ".5rem",
                }
              }
            >
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  permissions
                  : 
                </strong>
                <div
                  className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
                >
                  login
                </div>
                <div
                  className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
                >
                  logout
                </div>
              </div>
              <div
                style={
                  {
                    "flexWrap": "wrap",
                    "gap": "4px",
                    "paddingLeft": "1rem",
                  }
                }
              >
                <strong
                  className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
                  style={
                    {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  timezone
                  : 
                </strong>
                <span>
                  EST
                </span>
              </div>
            </section>
          </div>
        </section>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle dot delimiters correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          custom-delim
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          user
          : 
        </strong>
        <span>
          norvalbv
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle empty front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      No Front Matter
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <span>
      -
    </span>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle folded block scalars correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          fold_newlines
          : 
        </strong>
        <span>
          this is really a single line of text despite appearances

        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle incomplete front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      
    ---
    one: foo
    two: bar
    three: baz

    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <span>
      -
    </span>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle incorrect indentation in front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          error
          : 
        </strong>
        <span>
          Incorrectly formatted Front Matter
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle incorrectly formatted deep list in front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          error
          : 
        </strong>
        <span>
          Incorrectly formatted Front Matter
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle indented front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Members
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <span>
          BenjiTheGreat Steve_The_Great John The Great
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle list types correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Members
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          BenjiTheGreat
        </div>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          Steve_The_Great
        </div>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          John The Great
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle literal block scalars correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          include_newlines
          : 
        </strong>
        <span>
          exactly as you see
will appear these three
lines of poetry

        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle preformatted text correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <section
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": ".5rem",
            }
          }
        >
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              label
              : 
            </strong>
            <span>
              hello
            </span>
          </div>
          <div
            style={
              {
                "flexWrap": "wrap",
                "gap": "4px",
                "paddingLeft": "1rem",
              }
            }
          >
            <strong
              className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
              style={
                {
                  "textTransform": "capitalize",
                }
              }
            >
              color
              : 
            </strong>
            <span>
              red
            </span>
          </div>
        </section>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          benji
        </div>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          bob
        </div>
        <div
          className="themes_themes_PLAIN_DARK_nodes__xd3hr9e themes_styles_badge__xd3hr911 defaults_badge__cxs0rse"
        >
          mike
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle quoted values correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          with-random-chars
          : 
        </strong>
        <span>
          this-is-a-test 123 : 456: abc - 890!
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          current time
          : 
        </strong>
        <span>
          Thursday, December 22nd 2022, 10:09:56 pm
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          time tomorrow
          : 
        </strong>
        <span>
          Friday,--------December 23nd 2022, 10:09:55 pm
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          access areas
          : 
        </strong>
        <span>
          all : 123
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle semicolon delimiters correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          custom-delim
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          user
          : 
        </strong>
        <span>
          norvalbv
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle special characters in front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          !@£$%^&*()[]{};':|,./&lt;&gt;?\`~
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle string types correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          job
          : 
        </strong>
        <span>
          software engineer
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          doesProgram
          : 
        </strong>
        <span>
          true
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          number
          : 
        </strong>
        <span>
          10
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle tilde delimiters correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          custom-delim
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          user
          : 
        </strong>
        <span>
          norvalbv
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle unquoted values in front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -----December 22nd 2022, 10:09:55 pm
    access areas: all : 123
    ---
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          error
          : 
        </strong>
        <span>
          Incorrectly formatted Front Matter
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle various basic types correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          job
          : 
        </strong>
        <span>
          software engineer
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          doesProgram
          : 
        </strong>
        <span>
          true
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          number
          : 
        </strong>
        <span>
          10
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should handle void front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <span>
      -
    </span>
  </div>
</section>
`;

exports[`<FrontMatter /> should ignore comments in front matter 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      -
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Admins
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          users
          : 
        </strong>
        <span>
          BenjiTheGreat
        </span>
      </div>
    </section>
  </div>
</section>
`;

exports[`<FrontMatter /> should render content with basic front matter correctly 1`] = `
<section
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "gap": ".5rem",
    }
  }
>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      blog
      : 
    </strong>
    <span>
      Content
    </span>
  </div>
  <div
    style={
      {
        "flexWrap": "wrap",
        "gap": "4px",
        "paddingLeft": undefined,
      }
    }
  >
    <strong
      className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
      style={
        {
          "textTransform": "capitalize",
        }
      }
    >
      frontMatter
      : 
    </strong>
    <section
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": ".5rem",
        }
      }
    >
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          title
          : 
        </strong>
        <span>
          Admin
        </span>
      </div>
      <div
        style={
          {
            "flexWrap": "wrap",
            "gap": "4px",
            "paddingLeft": "1rem",
          }
        }
      >
        <strong
          className="themes_styles_strong__xd3hr9z defaults_strong__cxs0rs7"
          style={
            {
              "textTransform": "capitalize",
            }
          }
        >
          user
          : 
        </strong>
        <span>
          BenjiTheGreat
        </span>
      </div>
    </section>
  </div>
</section>
`;
